[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemon_tizer"
version = "0.0.4"
authors = [
  { name="Jonathan Fox", email="author@example.com" },
]
description = "LemonTizer is a class that wraps the spacy library to build a lemmatizer for language learning applications."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["lemmatizer", "spacy", "wrapper"]
dependencies = ["spacy"]

[project.urls]
Homepage = "https://github.com/jonathanfox5/lemon_tizer"
Issues = "https://github.com/jonathanfox5/lemon_tizer/issues"